[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "html-to-pdf-python"
version = "0.1.0"
dependencies = [
    "selenium >= 4.18.0"
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
authors = [
  {name = "shimmy", email = "shimmyzalesh@gmail.com"},
]

[tool.pytest.ini_options]
minversion = "0.0"
addopts = ["--import-mode=importlib"]

[tool.hatch.build.targets.wheel]
packages = ["."]

